login window adjustments with or divider

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
   <title>Mission Cards</title>
 
   <script src="https://kit.fontawesome.com/aff5f1d5dc.js" crossorigin="anonymous"></script>
+
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +20,7 @@
 
 <body>
   <div id="root"></div>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script type="module" src="/src/index.tsx"></script>
 </body>
 
