addded route protection to front end

--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta name="description" content="Your description goes here">
   <meta name="keywords" content="one, two, three">
-  <meta name="google-signin-client_id"
-    content="785322521849-crbjnjmu9q3s0nhdcj896qq0d7u7snq5.apps.googleusercontent.com">
+  <!-- <meta name="google-signin-client_id"
+    content="785322521849-crbjnjmu9q3s0nhdcj896qq0d7u7snq5.apps.googleusercontent.com"> -->
 
 
   <title>Mission Cards</title>
 
   <script src="https://kit.fontawesome.com/aff5f1d5dc.js" crossorigin="anonymous"></script>
   <!-- google sign in features for users token id and to choose their google acct -->
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
