mobile layout fixed for home page

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="description" content="Your description goes here">
   <meta name="keywords" content="one, two, three">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <!-- <meta name="google-signin-client_id"
     content="785322521849-crbjnjmu9q3s0nhdcj896qq0d7u7snq5.apps.googleusercontent.com"> -->
 
